--- a/views/fruits/new.ejs
+++ b/views/fruits/new.ejs
@@ -10,12 +10,14 @@
 <body>
     <h1>Create a New Fruit!</h1>
     <form action="/fruits" method="POST">
-        <label for="name">Name:</label>
-        <input type="text" name="name" id="name" />
-
-        <label for="isReadyToEat">Ready to Eat?</label>
-        <input type="checkbox" name="isReadyToEat" id="isReadyToEat" />
-
+        <div>
+            <label for="name">Name:</label>
+            <input type="text" name="name" id="name" />
+        </div>
+        <div>
+            <label for="isReadyToEat">Ready to Eat?</label>
+            <input type="checkbox" name="isReadyToEat" id="isReadyToEat" />
+        </div>
         <button type="submit">Add Fruit</button>
     </form>
 </body>
