adding index.ejs create a POST request and add the links to redirct to other page in each page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Welcome to the Fruits app!</h1>
+    <a href="/fruits">Browse Fruits</a>
     <p>An app for collecting your favorite fruits.</p>
   </body>
 </html>
