--- a/views/fruits/new.ejs
+++ b/views/fruits/new.ejs
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Create a New Fruit!</h1>
-    <a href="/fruits/">Back to Fruits</a>
+    <a href="/fruits">Back to Fruits</a>
     <form action="/fruits" method="POST">
         <div>
             <label for="name">Name:</label>
