--- a/views/fruits/edit.ejs
+++ b/views/fruits/edit.ejs
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>Create a Fruit</title>
 </head>
 
 <body>
     <h1>Edit <%= fruit.name %>
     </h1>
-    <form action="/fruits/<%=fruit._id%>?_method=PUT" method="POST">
+    <form action="/fruits/<%= fruit._id %>?_method=PUT" method="POST">
         <label for="name">Name:</label>
         <input 
         type="text" 
@@ -18,18 +19,23 @@
         value="<%= fruit.name %>" 
         />
 
-        <label for="isReadyToEat">Ready to Eat?</label>
-        <input 
-        type="checkbox" 
-        name="isReadyToEat" 
-        <% if (fruit.isReadyToEat) { %>
-            checked 
-            <% } %>
-        />
+        <div class="checkbox-div">
+            <label for="ready-to-eat">Ready to Eat?</label>
+            <input 
+                type="checkbox" 
+                name="isReadyToEat" 
+                <% if (fruit.isReadyToEat) { %>
+                    checked 
+                <% } %>
+                id="ready-to-eat"
+            />
+        </div>
 
         <button type="submit">Update <%= fruit.name %></button>
     </form>
-    <a href="/fruits">Back to Fruits</a>
+    <a class="fruits-index-link" href="/fruits">
+        <div class="index-link-text">Back to Fruits</div>
+    </a>
 </body>
 
 </html>
