--- a/views/fruits/index.ejs
+++ b/views/fruits/index.ejs
@@ -4,16 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>Fruits Index</title>
 </head>
 
 <body>
-    <h1>All Fruits</h1>
-    <a href="/fruits/new">Add New Fruit</a>
+    <div class="index-header-div">
+        <h1>All Fruits</h1>
+        <a class="add-fruit" href="/fruits/new">Add fruit</a>
+    </div>
     <ul>
-        <% fruits.forEach(fruit=> { %>
+        <% fruits.forEach((fruit)=> { %>
             <li>
-                <a href="/fruits/<%= fruit._id %>">
+                <a class="fruit-cards" href="/fruits/<%=fruit._id%>">
                     <%= fruit.name %>
                 </a>
             </li>
