--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fruits App</title>
-  </head>
-  <body>
-    <h1>Welcome to the Fruits app!</h1>
-    <a href="/fruits">Browse Fruits</a>
-    <p>An app for collecting your favorite fruits.</p>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/stylesheets/style.css" />
+  <title>Fruits App</title>
+</head>
+
+<body>
+  <h1>Welcome to the Fruits app!</h1>
+  <img class="fruit-pic1" src="https://cdn-icons-png.flaticon.com/128/5312/5312448.png" alt="happy fruit salad bowl" />
+  <a class="fruits-index-link" href="/fruits">Browse Fruits</a>
+  <p>An app for collecting your favorite fruits.</p>
+</body>
+<footer>Icons by <a href="https://www.flaticon.com/authors/freepik">Freekpik</a></footer>
+
 </html>
